    (i.e., the original Farrington method) and a power transformation
    was applied to the data (\code{powertrans != "none"}).
    [reported by Lore Merdrignac]

    \item \code{epidataCS2sts()} no longer transfers the
    \code{stgrid$BLOCK} indices to the \code{epoch} slot of the
    resulting \code{"sts"} object (to avoid \code{epoch[1] != 1}
    scenarios).
  }
}

}


\section{Changes in surveillance version 1.16.2 (2018-07-24)}{

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{autoplot.sts()} gained a \code{width} argument to adjust
    the bar width, which now defaults to 7 for weekly time series
    (previously was 90\% of that so there were gaps between the bars).
    
    \item \code{"epidataCS"} generation now (again) employs
    \CRANpkg{spatstat}'s \code{bdist.points()}, which has been
    accelerated in version 1.56-0. If you use the
    \code{twinstim()}-related modelling part of \pkg{surveillance}, you
    are thus advised to update your \pkg{spatstat} installation.

    \item The \code{boda()} examples in
    \code{vignette("monitoringCounts")} have been updated to also work
    with recent versions of \pkg{INLA}.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item Offsets in \code{hhh4}'s epidemic components were ignored by
    \code{simulate.hhh4()} [spotted by Johannes Bracher] as well as
    in dominant eigenvalues (\dQuote{maxEV}).

    \item The color key in \code{fanplot()} is no longer distorted by
    \code{log="y"}.
  }
}

}


\section{Changes in surveillance version 1.16.1 (2018-05-28)}{

\subsection{BUG FIXES}{
  \itemize{
    \item \code{autoplot.sts()} now sets the calling environment as
    the \code{plot_env} of the result.

    \item Several \code{twinstim}-related functions finally allow for
    prehistory events (long supported by \code{twinstim()} itself):
    \code{as.epidataCS()}, \code{glm_epidataCS()},
    \code{as.epidata.epidataCS()}.

    \item The \code{summary()} for SI[R]S-type \code{"epidata"} failed